Tue May 26 16:52:18 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/NamedSymbol.java (dump): dump name as
	  string.

Tue May 26 16:07:33 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: --dump-asm now dumps
	  AssemblyFile.

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --print-asm, prints assembly source text.

	* net/loveruby/cflat/compiler/CompilerMode.java: new enum
	  PrintAsm.

	* net/loveruby/cflat/compiler/Options.java: new option
	  --print-asm.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: new method
	  #dump.

	* net/loveruby/cflat/sysdep/x86/Register.java: new method #dump.

	* net/loveruby/cflat/asm: new method #dump.

Tue May 26 15:16:04 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: refactoring:
	  apply strict visibility.

Tue May 26 15:11:19 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: change CodeGenerator
	  output: String -> AssemblyFile.

	* net/loveruby/cflat/sysdep/AssemblyFile.java: new interface.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: implement it.

	* net/loveruby/cflat/sysdep/CodeGenerator.java: #generate returns
	  AssemblyFile.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

Tue May 26 13:40:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86: rename class: RegKind ->
	  RegisterClass.

	* net/loveruby/cflat/sysdep/x86: follow it.

Tue May 26 13:23:56 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm: refactoring: rename class: AsmStatistics
	  -> Statistics.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: follow it.

Tue May 26 13:18:52 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm: refactoring: rename class: AsmOperand ->
	  Operand.

	* net/loveruby/cflat/asm: follow it.

	* net/loveruby/cflat/sysdep/x86: follow it.

	* net/loveruby/cflat/ir: follow it.
